--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Poukar Company</string>
     <string name="executive_head">Jednatel:</string>
+    <string name="executive_head_name">Ing. Aleš Poukar</string>
+    <string name="phone_number">+420 602 538 800</string>
     <string name="monday">Pondělí</string>
     <string name="tuesday">Úterý</string>
     <string name="wednesday">Středa</string>
